fixed nivo slider not showing "navigation"

--- a/wordpress/wp-content/plugins/nivo-slider-for-wordpress/css/nivoslider4wp.css
+++ b/wordpress/wp-content/plugins/nivo-slider-for-wordpress/css/nivoslider4wp.css
@@ -100,8 +100,32 @@
 	display:block;
 }
 
-.nivo-controlNav {
-	display:none;
+.nivoSlider .nivo-controlNav {
+    display: none;
+}
+
+.nivoSlider:hover .nivo-controlNav {
+    display: block;
+    position:absolute;
+	left:50%;
+	bottom:10px;
+    margin-left:-45px; /* Tweak this to center bullets */
+    z-index: 1000;
+}
+
+.nivo-controlNav a {
+	display:block;
+	width:22px;
+	height:22px;
+	background:url(images/bullets.png) no-repeat;
+	text-indent:-9999px;
+	border:0;
+	margin-right:3px;
+	float:left;
+	cursor: pointer;
+}
+.nivo-controlNav a.active {
+	background-position:0 -22px;
 }
 
 .nivo-directionNav a {
